<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mkdg.com.dbworker.User_list">

    <TextView
        android:id="@+id/fio_title"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:text="@string/fio_field"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp"
        android:background="#FF0"
        />
    <TextView
        android:id="@+id/birth_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birth_date_field"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintLeft_toRightOf="@+id/fio_title"
        android:background="#FF0"/>
    <TextView
        android:id="@+id/birth_place_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birth_place_field"
        android:layout_marginStart="45dp"
        app:layout_constraintLeft_toRightOf="@+id/birth_date_title"
        android:background="#FF0"/>

    <TextView
        android:id="@+id/sex_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex_selector"
        android:layout_marginStart="45dp"
        app:layout_constraintLeft_toRightOf="@+id/birth_place_title"
        android:background="#FF0"/>


    <ListView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="35dp"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>
