<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mkdg.com.dbworker.EditUserActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_user_fio_text"
        android:text="@string/fio_field"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_user_birthPlace_text"
        android:text="@string/birth_place_field"
        android:layout_below="@id/edit_user_fio_text"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_user_birthDate_text"
        android:text="@string/birth_date_field"
        android:layout_below="@id/edit_user_birthPlace_text"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_user_sex_text"
        android:text="@string/sex_selector"
        android:layout_below="@id/edit_user_birthDate_text"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="12dp"/>

    <EditText
        android:id="@+id/edit_user_fio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_above="@+id/edit_user_birthPlace_text"
        android:layout_alignStart="@+id/edit_user_birthPlace"
        android:paddingLeft="60dp"
         />

    <EditText
        android:id="@+id/edit_user_birthPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_above="@+id/edit_user_birthDate_text"
        android:layout_alignStart="@+id/edit_user_birthDate"
        android:paddingLeft="60dp"
         />

    <EditText
        android:id="@+id/edit_user_birthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_alignBottom="@+id/edit_user_birthDate_text"
        android:layout_marginStart="28dp"
        android:layout_toEndOf="@+id/edit_user_birthDate_text"
        android:paddingLeft="60dp"
         />

    <EditText
        android:id="@+id/edit_user_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_alignBaseline="@+id/edit_user_sex_text"
        android:layout_alignBottom="@+id/edit_user_sex_text"
        android:layout_alignStart="@+id/edit_user_birthDate"
        android:paddingLeft="60dp"
        />

    <Button
        android:id="@+id/edit_user_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edit_user_sex"
        android:layout_below="@+id/edit_user_sex"
        android:layout_marginTop="26dp"
        android:text="@string/edit_user" />



</RelativeLayout>
